# bilibili-streamer

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  README_EN.md  biome.json  index.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.claude/commands/: release.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-19-hd-icons.md  2026-05-21-danmaku-float.md
docs/superpowers/specs/: 2026-05-19-theme-colors-design.md  2026-05-21-danmaku-float-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  config.rs  danmaku.rs  live.rs  mod.rs  user.rs  window.rs
src-tauri/src/models/: config.rs  danmaku.rs  live.rs  mod.rs  user.rs
src-tauri/src/services/: auth_service.rs  bili_api.rs  config_store.rs  danmaku_ws.rs  live_service.rs  mod.rs  user_service.rs
src-tauri/src/utils/: crypto.rs  mask.rs  mod.rs  wbi.rs
src/components/: AccountPanel.tsx  ConsolePanel.tsx  DanmakuFloat.tsx  DanmakuPanel.tsx  LoginPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StreamPanel.tsx
src/context/: AppContext.tsx
src/hooks/: useTauri.ts
src/styles/: globals.css
src/types/: api.ts
src/utils/: danmaku.tsx
