[package]
name = "bili-live-tool"
version = "3.0.3"
description = "Bilibili Live Stream Tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md-5 = "0.10"
hex = "0.4"
chrono = "0.4"
urlencoding = "2"
flate2 = "1"
brotli = "6"
base64 = "0.22"
prost = "0.13"
http = "1"
once_cell = "1"
futures = "0.3.32"

[lib]
name = "bili_live_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bili-live-tool"
path = "src/main.rs"
